--- a/iOS-sample-app/Showcases/Screen Views/ScreenViews.storyboard
+++ b/iOS-sample-app/Showcases/Screen Views/ScreenViews.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="89o-QE-zg7">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -56,6 +57,26 @@
                                         </tableViewCellContentView>
                                         <connections>
                                             <segue destination="JkP-UF-iJp" kind="show" id="RC6-IN-eL1"/>
+                                        </connections>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" textLabel="TTg-ET-HyP" style="IBUITableViewCellStyleDefault" id="XcU-go-6IY">
+                                        <rect key="frame" x="0.0" y="115" width="414" height="43.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="XcU-go-6IY" id="Ngt-U1-s2N">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Screen views for paged scroll views" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="TTg-ET-HyP">
+                                                    <rect key="frame" x="20" y="0.0" width="374" height="43.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="esQ-qK-sI2" kind="show" id="xYr-Qt-Vcy"/>
                                         </connections>
                                     </tableViewCell>
                                 </cells>
@@ -113,7 +134,42 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4qB-w3-1By" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="677" y="-297"/>
+            <point key="canvasLocation" x="675" y="-431"/>
+        </scene>
+        <!--Paged Scroll View Controller-->
+        <scene sceneID="aYu-2h-nML">
+            <objects>
+                <viewController id="esQ-qK-sI2" customClass="PagedScrollViewController" customModule="iOS_sample_app" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="71D-uT-x5I">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" pagingEnabled="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lYc-IA-9De">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <viewLayoutGuide key="contentLayoutGuide" id="qwK-Yt-Ne7"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="l73-XE-6aE"/>
+                                <connections>
+                                    <outlet property="delegate" destination="esQ-qK-sI2" id="p0C-GS-FzR"/>
+                                </connections>
+                            </scrollView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="lYc-IA-9De" secondAttribute="bottom" id="7qQ-dI-faS"/>
+                            <constraint firstItem="lYc-IA-9De" firstAttribute="leading" secondItem="71D-uT-x5I" secondAttribute="leading" id="CRG-Oa-e1J"/>
+                            <constraint firstAttribute="trailing" secondItem="lYc-IA-9De" secondAttribute="trailing" id="ECN-ea-0dP"/>
+                            <constraint firstItem="lYc-IA-9De" firstAttribute="top" secondItem="71D-uT-x5I" secondAttribute="top" id="Vn6-Ye-Pb5"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="UZl-9q-ETK"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="oIE-K0-vUY"/>
+                    <connections>
+                        <outlet property="scrollView" destination="lYc-IA-9De" id="tTi-Si-Qa2"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7dN-7v-O5D" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="656.52173913043487" y="361.60714285714283"/>
         </scene>
         <!--Default screen views-->
         <scene sceneID="OF5-2V-noW">
