Improve paged scroll view screen

--- a/iOS-sample-app/Showcases/Screen Views/ScreenViews.storyboard
+++ b/iOS-sample-app/Showcases/Screen Views/ScreenViews.storyboard
@@ -165,7 +165,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" pagingEnabled="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lYc-IA-9De">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                                 <viewLayoutGuide key="contentLayoutGuide" id="qwK-Yt-Ne7"/>
                                 <viewLayoutGuide key="frameLayoutGuide" id="l73-XE-6aE"/>
                                 <connections>
@@ -175,10 +175,10 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstAttribute="bottom" secondItem="lYc-IA-9De" secondAttribute="bottom" id="7qQ-dI-faS"/>
-                            <constraint firstItem="lYc-IA-9De" firstAttribute="leading" secondItem="71D-uT-x5I" secondAttribute="leading" id="CRG-Oa-e1J"/>
-                            <constraint firstAttribute="trailing" secondItem="lYc-IA-9De" secondAttribute="trailing" id="ECN-ea-0dP"/>
-                            <constraint firstItem="lYc-IA-9De" firstAttribute="top" secondItem="71D-uT-x5I" secondAttribute="top" id="Vn6-Ye-Pb5"/>
+                            <constraint firstItem="lYc-IA-9De" firstAttribute="width" secondItem="UZl-9q-ETK" secondAttribute="width" id="Qvn-2A-aR6"/>
+                            <constraint firstItem="lYc-IA-9De" firstAttribute="height" secondItem="UZl-9q-ETK" secondAttribute="height" id="iWy-pe-Dyx"/>
+                            <constraint firstItem="lYc-IA-9De" firstAttribute="centerY" secondItem="UZl-9q-ETK" secondAttribute="centerY" id="tFv-f5-0yn"/>
+                            <constraint firstItem="lYc-IA-9De" firstAttribute="centerX" secondItem="UZl-9q-ETK" secondAttribute="centerX" id="zq3-y1-XNB"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="UZl-9q-ETK"/>
                     </view>
@@ -189,7 +189,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7dN-7v-O5D" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1599" y="-3"/>
+            <point key="canvasLocation" x="1598.5507246376812" y="-3.3482142857142856"/>
         </scene>
         <!--Default screen views-->
         <scene sceneID="OF5-2V-noW">
